color bug fixed

--- a/cyberpunk-2077.css
+++ b/cyberpunk-2077.css
@@ -328,7 +328,7 @@ p.cyberpunk.inverse,
   border: none;
   padding: 40px 15px 30px;
   clip-path: polygon(0px 25px, 26px 0px, calc(60% - 25px) 0px, 60% 25px, 100% 25px, 100% calc(100% - 10px), calc(100% - 15px) calc(100% - 10px), calc(80% - 10px) calc(100% - 10px), calc(80% - 15px) 100%, 80px calc(100% - 0px), 65px calc(100% - 15px), 0% calc(100% - 15px));
-  background-color: #var(--black-color);
+  background-color: var(--black-color);
   color: var(--yellow-color);
   border-right: 3px solid var(--border-color);
 }
