--- a/cyberpunk-2077.css
+++ b/cyberpunk-2077.css
@@ -1117,6 +1117,27 @@ section.cyberpunk.black:after {
   clip-path: polygon(0% 0%, 22% 0%, calc(22% + 30px) 30px, 52% 30px, calc(52% + 15px) 15px, 70% 15px, calc(70% + 15px) 30px, 90% 30px, calc(90% + 30px) 0px, 100% 0px, 100% 30px, 0px 30px);
 }
 
+section.cyberpunk.both:after,
+section.cyberpunk.both.black:after {
+  height: 100%;
+  clip-path: polygon(
+    0px 30%,
+    30px calc(30% + 30px), 
+    30px calc(100% - 30px), 
+    22% calc(100% - 30px), 
+    calc(22% + 30px) 100%, 
+    52% 100%, calc(52% + 15px) 
+    calc(100% - 15px), 
+    70% calc(100% - 15px), 
+    calc(70% + 15px) 100%, 
+    90% 100%, 
+    calc(90% + 30px) calc(100% - 30px), 
+    100% calc(100% - 30px), 
+    100% 100%, 
+    0px 100%);
+  /*background-color: red;*/
+}
+
 section.cyberpunk.black:after {
   background-color: var(--yellow-color);
 }
@@ -1154,7 +1175,35 @@ section.cyberpunk.black:before {
   height: 30px;
   background-color: var(--yellow-color);
   position: absolute;
-  clip-path: polygon(calc(22% + 28px) -1px, calc(22% + 45px) 15px, 34% 15px, calc(34% + 15px) -1px, 70% 0px)
+  clip-path: polygon(
+    calc(22% + 28px) -1px, 
+    calc(22% + 45px) 15px, 
+    34% 15px, 
+    calc(34% + 15px) -1px, 
+    70% 0px
+  );
+}
+
+section.cyberpunk.both:before,
+section.cyberpunk.both.black:before {
+  height: 100%;
+  clip-path: polygon(
+    calc(22% + 28px) -1px, 
+    calc(22% + 45px) 15px, 
+    34% 15px, 
+    calc(34% + 15px) -1px, 
+    70% 0px,
+    
+    30px 0px,
+    30px 50%,
+    0px calc(50% + 30px),
+    0px 80%,
+    30px calc(80% + 30px),
+    30px 100%,
+    0% 100%, 0px 30px, 
+    31px 0%
+  );
+  /*background-color: green;*/
 }
 
 section.cyberpunk:before {
